--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -16,37 +16,39 @@ jobs:
     steps:
     # Step 1: Checkout the repository to ensure package.json is available
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     # Step 2: Set up Node.js environment
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '14'
+        node-version: '16'
+        cache: 'npm'
 
     # Step 3: Clean npm cache to avoid potential issues
     - name: Clean npm cache
-      run: npm cache clean --force  # Clear npm cache
+      run: npm cache clean --force
 
     # Step 4: Update npm to the latest stable version
     - name: Update npm to latest stable version
-      run: npm install -g npm@latest  # Install latest npm
+      run: npm install -g npm@latest
 
     # Step 5: List files for debugging (Optional step to check the directory structure)
     - name: List files for debugging
-      run: ls -la /home/runner/work/MCP-Repo/MCP-Repo
+      run: ls -la
 
-    # Step 6: Install dependencies using npm ci
+    # Step 6: Install dependencies using npm ci with legacy-peer-deps flag
     - name: Install dependencies
-      run: npm ci  # Install dependencies from package-lock.json
+      run: npm install --legacy-peer-deps
+      # Replaced npm ci with npm install to avoid issues with ansi-regex dependency
 
     # Step 7: Install Playwright Browsers
     - name: Install Playwright Browsers
-      run: npm run install:browsers  # Install necessary browsers for Playwright
+      run: npm run install:browsers
 
     # Step 8: Run MCP tests
     - name: Run MCP Tests
-      run: npm run test:mcp  # Run the MCP tests using your custom script
+      run: npm run test:mcp
 
     # Optional: Add success message after tests
     - name: Send success message
