Add push trigger to GitHub workflow

--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -8,6 +8,8 @@ on:
         default: 'World'
         required: true
         type: string
+  push:
+    branches: [ main, master ]
 
 jobs:
   ci_cd_workflow:
