--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -45,18 +45,15 @@ jobs:
       run: npm install --legacy-peer-deps
       # Replaced npm ci with npm install to avoid issues with ansi-regex dependency
 
-    # Step 7: Install system dependencies required by Playwright
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgbm-dev libatk1.0-0 libatk-bridge2.0-0 libcups2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2 libpango-1.0-0 libpangocairo-1.0-0 libnspr4 libnss3
+    # Step 7: Install Playwright and browsers using the official action
+    - name: Set up Playwright
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - run: npm install -D @playwright/test
+    - run: npx playwright install --with-deps chromium
 
-    # Step 8: Install Playwright Browsers with system dependencies
-    - name: Install Playwright Browsers
-      run: PLAYWRIGHT_BROWSERS_PATH=0 npx playwright install chromium
-      # Installing only Chromium to reduce installation size and time
-
-    # Step 9: Run MCP tests
+    # Step 8: Run MCP tests
     - name: Run MCP Tests
       run: npm run test:mcp
 
